# CyberNoodles

./: .gitignore  README.md  main.py  pytest.ini  requirements.txt
cybernoodles/: __init__.py  bsor_bridge.py  paths.py
cybernoodles/archive/: __init__.py  train_rl_gpu_old.py
cybernoodles/core/: __init__.py  gpu_simulator.py  jump_timing.py  map_storage.py  network.py  pose_defaults.py  sim_cuda_ext.py  sim_cuda_kernels.cpp  sim_cuda_kernels.cu
cybernoodles/data/: __init__.py  dataset_builder.py  fetch_data.py  map_analyzer.py  shard_io.py  sim_calibration.py  style_calibration.py
cybernoodles/envs/: __init__.py  beat_saber_env.py  presets.py
cybernoodles/oracle/: SimSaber_LICENSE.txt  __init__.py  adapter.py  core.py
cybernoodles/replay/: __init__.py  generate_replay.py
cybernoodles/tools/: __init__.py  audit_replays.py  diagnose_policy.py  github_updater.py  quickstart.py  replay_regression.py  run_inference.py  score_replay.py
rust/bsor_tools/: Cargo.toml  README.md
rust/bsor_tools/src/: builder.rs  io.rs  lib.rs  main.rs  model.rs  sanitize.rs
tests/: test_bsor_bridge_backend_contract.py  test_data_integrity.py  test_dataset_builder_difficulty_contracts.py  test_env_contracts.py  test_env_timing_contracts.py  test_eval_profile_tuning.py  test_eval_split_guardrails.py  test_oracle_scoring_regressions.py  test_policy_eval_empty_contract.py  test_pose_and_jump_semantics.py  test_replay_generation_cpu_path.py  test_replay_timing_regressions.py  test_training_checkpoint_safety.py  test_training_signal_regressions.py  test_training_watchdog.py
(+10 files in other folders)
